clusters/edge-sdr/apps/headlamp-edge-sdr/namespace-headlamp-edge-sdr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp-edge-sdr
  labels:
    app.kubernetes.io/part-of: edge-sdr
